--- a/lab2-5/myproject1.html
+++ b/lab2-5/myproject1.html
@@ -4,7 +4,9 @@
 
 <head>
     <title>Martin.futureSoftwareEngineer</title>
-    <link rel="stylesheet" href=myproject1.css>
+    <link rel="stylesheet" href=myproject1.css> <!--myproject1.css is missing quotation marks-->
+    <!--Even though the website still works as expected without the quotation marks,-->
+    <!--it is still recommended to add the quotation marks anyways as a best practice-->
 
 
 </head>
